ui/fail/value/cast_lifetime.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/cast_lifetime.rs:13:29
   |
13 |         let v = Value::from(&a);
   |                             ^^ borrowed value does not live long enough
14 |         invalid = v.cast();
15 |     }
   |     - `a` dropped here while still borrowed
...
18 |     do_stuff(invalid);
   |              ------- borrow later used here
